common-applications/control/cla/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: cla-backend
  name: cla-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cla-backend
  template:
    metadata:
      labels:
        component: cla-backend
    spec:
      containers:
        - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/cla-backend:32a2c8144b109221bd591d70b17771b3dd957fdc
          imagePullPolicy: IfNotPresent
          name: cla-backend-pod
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p /opt/app/conf/pdfs/org_signature_pdf
              mkdir -p /opt/app/conf/pdfs/output
              /opt/app/cla-server
          volumeMounts:
            - mountPath: /opt/app/conf/pdfs
              name: data-volume
            - mountPath: /opt/app/conf/platforms/email.yaml
              subPath: email
              name: secret-volume
            - mountPath: /opt/app/conf/platforms/gmail.json
              subPath: gmail
              name: secret-volume
            - mountPath: /opt/app/conf/platforms/code_platforms.yaml
              subPath: code-platforms
              name: secret-volume
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: cla-data-vol
        - name: secret-volume
          secret:
            secretName: cla-secrets

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    component: cla-frontend
  name: cla-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cla-frontend
  template:
    metadata:
      labels:
        component: cla-frontend
    spec:
      containers:
        - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/cla-webui:0a1d30fe9ce79bba84f50d8c88f29d61b8748335
          imagePullPolicy: IfNotPresent
          name: cla-frontend-pod
          ports:
            - containerPort: 80
              name: http
              protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: cla-robot
  name: cla-robot
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cla-robot
  template:
    metadata:
      labels:
        component: cla-robot
    spec:
      containers:
        - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/cla-robot:32a2c8144b109221bd591d70b17771b3dd957fdc
          imagePullPolicy: IfNotPresent
          name: cla-robot-pod
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          command:
            - /bin/sh
            - -c
            - |
              /opt/app/cla-server
          volumeMounts:
            - mountPath: /opt/app/conf/robot-github/robot_token
              subPath: github-token
              name: secret-volume
            - mountPath: /opt/app/conf/robot-github/hmac
              subPath: github-hmac
              name: secret-volume
            - mountPath: /opt/app/conf/robot-github/cla_repo.yaml
              subPath: cla-repo.yaml
              name: github-cla-repo
              readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: cla-secrets
        - name: github-cla-repo
          configMap:
            name: github-cla-repo
