common-applications/control/cla/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cla-backend-service
spec:
  ports:
    - name: srv
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    component: cla-backend
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: claservice
spec:
  ports:
    - name: httpport
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    component: cla-frontend
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: cla-robot-service
spec:
  ports:
    - name: httpport
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    component: cla-robot
  type: ClusterIP
