common-applications/control/cla/clasign-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
  name: clasign-backend
spec:
  tls:
    - hosts:
        - clasign.openlookeng.io
      secretName: clasign-openlookeng-tls
  rules:
    - host: clasign.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: cla-backend-service
              servicePort: 80
            path: /api(/|$)(.*)
          - backend:
              serviceName: cla-robot-service
              servicePort: 80
            path: /robot(/|$)(.*)
