common-applications/control/cla/clasign-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-connections: "400"
    nginx.ingress.kubernetes.io/limit-rps: "400"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      add_header Cache-Control "no-cache";
      add_header Pragma "no-cache";
      add_header Content-Security-Policy "script-src 'self' *.baidu.com *.googleapis.com ers.baidu.com 'unsafe-eval' 'unsafe-inline';object-src 'none';frame-ancestors 'self'";
      add_header X-Xss-Protection "1;mode=block";
      add_header X-Content-Type-Options nosniff;
      add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
      add_header X-Frame-Options "SAMEORIGIN";
      add_header X-Download-Options "noopen";
  name: clasign-ingress
spec:
  tls:
    - hosts:
        - clasign.openlookeng.io
      secretName: clasign-openlookeng-tls
  rules:
    - host: clasign.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: claservice
              servicePort: 80
            path: /
