common-applications/control/cla/ingress-robot.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
  name: cla-ingress-robot
spec:
  tls:
    - hosts:
        - clarobot.osinfra.cn
      secretName: tls-secrets
  rules:
    - host: clarobot.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: cla-robot-service
              servicePort: 80
            path: /api(/|$)(.*)
